client/src/App.css
:root{
  --primary_color:#EFEFEF;
  --secondary_color:#3454D1;
  --tertiary_color:#34D1BF;
  --quartiary_color:#070707;
  --cinqieme_color:#D1345B;
}


body {
  color: var(--primary_color);
}



.add-bike{
  align-items: center;
}

#card-title {
  text-decoration: none;
  color: var(--quartiary_color);
  text-align: center;
}

#add-ride-row {
  align-content: center;
}
.add-bike {
  align-items: center;
  width: 200vw;
}

